--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,8 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.8.0
-  get: ^4.7.2
+
+  go_router: ^14.8.1
   google_fonts: ^6.2.1
 
 dev_dependencies:
@@ -54,7 +55,7 @@ flutter:
   assets:
     - assets/images/
     - assets/fonts/
-    
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
